--- a/app/index.html
+++ b/app/index.html
@@ -5,7 +5,7 @@
         <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
         <title>App</title>
         <link rel="stylesheet" href="styles/main.css">
-        <script data-main="main" src="bower_components/requirejs/require.js"></script>
+        <script data-main="scripts/main" src="bower_components/requirejs/require.js"></script>
     </head>
     <body>
         <div id="app">
