added translation test

--- a/app/index.html
+++ b/app/index.html
@@ -14,6 +14,7 @@
                 <li><a href="#!/profil">Profile</a></li>
                 <li><a href="#!/help">Help</a></li>
                 <li><a href="#!/admin">Admin</a></li>
+                <li><a href="#!/translation">Translation</a></li>
             </ul>
             <div v-view="currentView" class="view" v-transition>
             <!-- content rendered here -->
