--- a/app/index.html
+++ b/app/index.html
@@ -10,7 +10,7 @@
     <body>
         <div id="app">
             <ul>
-                <li><a href="#!/home" v-on="click:blubb('home')">Home</a></li>
+                <li><a href="#!/home">Home</a></li>
                 <li><a href="#!/profil">Profile</a></li>
                 <li><a href="#!/help">Help</a></li>
                 <li><a href="#!/admin">Admin</a></li>
