--- a/app/index.html
+++ b/app/index.html
@@ -17,6 +17,7 @@
                 <li><a href="#!/translation">Translation</a></li>
             </ul>
             <div v-view="currentView" class="view" v-transition>
+                Ich bereite alles für dein awesome Erlebnis vor...
                 <!-- content rendered here -->
             </div>
         </div>
