added some stuff

--- a/app/index.html
+++ b/app/index.html
@@ -11,13 +11,12 @@
         <div id="app">
             <ul>
                 <li><a href="#!/home">Home</a></li>
-                <li><a href="#!/profil">Profile</a></li>
+                <li><a href="#!/settings">Settings</a></li>
                 <li><a href="#!/help">Help</a></li>
-                <li><a href="#!/admin">Admin</a></li>
                 <li><a href="#!/translation">Translation</a></li>
             </ul>
             <div v-view="currentView" class="view" v-transition>
-                Ich bereite alles für dein awesome Erlebnis vor...
+                Ich lade...
                 <!-- content rendered here -->
             </div>
         </div>
