first layout implementation

--- a/app/index.html
+++ b/app/index.html
@@ -3,26 +3,26 @@
     <head>
         <meta charset="utf-8">
         <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
+        <meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no">
         <title>App</title>
         <link rel="stylesheet" href="styles/main.css">
         <script data-main="scripts/main" src="bower_components/requirejs/require.js"></script>
     </head>
     <body>
-        <div id="app" class="indoor">
+        <div id="app" class="night">
 
             <!-- navigation -->
             <ul id="navigation">
                 <li><a href="#!/home" data-route="home"><span class="icon">H</span><span class="icon-info">Home</span></a></li>
                 <li><a href="#!/settings" data-route="settings"><span class="icon">S</span><span class="icon-info">Settings</span></a></li>
                 <li><a href="#!/help" data-route="help"><span class="icon">H</span><span class="icon-info">Help</span></a></li>
-                <li><a href="#!/translation" data-route="translation"><span class="icon">T</span><span class="icon-info">Translation</span></a></li>
             </ul>
             <!-- navigation END -->
             
             <!-- initial loader -->
             <div id="inital-loader-wrapper">
                 <div id="inital-loader">
-                    Dein Musikerlebnis wird vorbereitet...
+                    Loading...
                 </div>
             </div>
             <!-- initial loader END -->
