restructured html and improved mobile view (navi)

--- a/app/index.html
+++ b/app/index.html
@@ -13,7 +13,7 @@
 
             <!-- navigation -->
             <ul id="navigation">
-                <li><a href="#!/home" data-route="home"><span class="icon">H</span><span class="icon-info">MusicMagnet</span></a></li>
+                <li><a href="#!/home" data-route="home"><span class="icon">M</span><span class="icon-info">MusicMagnet</span></a></li>
                 <li><a href="#!/settings" data-route="settings"><span class="icon">S</span><span class="icon-info">Settings</span></a></li>
                 <li><a href="#!/help" data-route="help"><span class="icon">H</span><span class="icon-info">Help</span></a></li>
             </ul>
