--- a/app/index.html
+++ b/app/index.html
@@ -13,7 +13,7 @@
 
             <!-- navigation -->
             <ul id="navigation">
-                <li><a href="#!/home" data-route="home"><img src="images/settings.svg" alt=""><span class="icon-info">MUSICMAGNET</span></a></li>
+                <li><a href="#!/home" data-route="home"><img src="images/player.svg" alt=""><span class="icon-info">MUSICMAGNET</span></a></li>
                 <li><a href="#!/settings" data-route="settings"><img src="images/settings.svg" alt=""><span class="icon-info">SETTINGS</span></a></li>
                 <li><a href="#!/help" data-route="help"><img src="images/help.svg" alt=""><span class="icon-info">HELP</span></a></li>
             </ul>
